# webscope

./: .gitignore  CMakeLists.txt  README.md  asset-manifest.json  core1_task.c  dev_lowlevel.c  dev_lowlevel.h  driver.c  firmware.uf2  index.html  main.c  manual.html  usb_descriptors.c  usb_thread.c
docs/: diagram.drawio
firmware/: CMakeLists.txt  core1_task.c  driver.c  main.c  test.py  tusb_config.h  usb_commands.c  usb_descriptors.c  webscope_fw.uf2
gui/: .eslintcache  csv_plot.py  nohup.out  package-lock.json  package.json  tailwind.config.js
gui/public/: firmware.uf2  index.html  manual.html
gui/src/: App.css  App.js  AppMenu.js  CanvasPlot.js  Capture.js  CaptureDepthAndSampleRateConfig.js  CaptureMap.js  CaptureSave.js  ChannelControl.css  ChannelControl.js  ChannelPicker.css  ConnectDevice.js  CursorControl.js  CursorMeasurementBox.css  CursorMeasurementBox.js  CursorSliderOverlay.js  DropDown.js  Floating.css  Floating.js  GeneratorControl.js  HorizontalControl.js  HorizontalSlider.js  HoverBox.js  MeasurementBox.css  MeasurementBox.js  MultiRangeSlider.css  MultiRangeSlider.js  Plot.js  PopUpWindow.js  PowerSupplyControl.js  SamplingControl.css  SamplingControl.js  SettingControl.js  SideBarButton.js  SideBarButtonBar.js  SideMenu.css  SideMenu.js  SplashScreen.js  TriggerControl.js  Utils.js  (+8 more)
static/css/: main.2c46eccd.css  main.2c46eccd.css.map  main.35dd3fe5.css  main.35dd3fe5.css.map  main.3ed08f03.css  main.3ed08f03.css.map  main.70a97548.css  main.70a97548.css.map  main.835fc561.css  main.835fc561.css.map  main.86c14558.css  main.86c14558.css.map  main.b5e52949.css  main.b5e52949.css.map  main.ddf207c0.css  (+3 more)
(+44 files in other folders)
